--- a/DEEP LEARNING.ipynb
+++ b/DEEP LEARNING.ipynb
@@ -2,54 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Collecting tensorflow\n",
-      "  Downloading tensorflow-1.5.0-cp36-cp36m-win_amd64.whl (31.1MB)\n",
-      "Requirement already satisfied: six>=1.10.0 in c:\\users\\gabri\\anaconda3\\lib\\site-packages (from tensorflow)\n",
-      "Requirement already satisfied: numpy>=1.12.1 in c:\\users\\gabri\\anaconda3\\lib\\site-packages (from tensorflow)\n",
-      "Requirement already satisfied: wheel>=0.26 in c:\\users\\gabri\\anaconda3\\lib\\site-packages (from tensorflow)\n",
-      "Collecting protobuf>=3.4.0 (from tensorflow)\n",
-      "  Downloading protobuf-3.5.1-py2.py3-none-any.whl (388kB)\n",
-      "Collecting tensorflow-tensorboard<1.6.0,>=1.5.0 (from tensorflow)\n",
-      "  Downloading tensorflow_tensorboard-1.5.1-py3-none-any.whl (3.0MB)\n",
-      "Collecting absl-py>=0.1.6 (from tensorflow)\n",
-      "  Downloading absl-py-0.1.10.tar.gz (79kB)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\gabri\\anaconda3\\lib\\site-packages (from protobuf>=3.4.0->tensorflow)\n",
-      "Collecting html5lib==0.9999999 (from tensorflow-tensorboard<1.6.0,>=1.5.0->tensorflow)\n",
-      "  Downloading html5lib-0.9999999.tar.gz (889kB)\n",
-      "Requirement already satisfied: werkzeug>=0.11.10 in c:\\users\\gabri\\anaconda3\\lib\\site-packages (from tensorflow-tensorboard<1.6.0,>=1.5.0->tensorflow)\n",
-      "Collecting bleach==1.5.0 (from tensorflow-tensorboard<1.6.0,>=1.5.0->tensorflow)\n",
-      "  Downloading bleach-1.5.0-py2.py3-none-any.whl\n",
-      "Collecting markdown>=2.6.8 (from tensorflow-tensorboard<1.6.0,>=1.5.0->tensorflow)\n",
-      "  Downloading Markdown-2.6.11-py2.py3-none-any.whl (78kB)\n",
-      "Building wheels for collected packages: absl-py, html5lib\n",
-      "  Running setup.py bdist_wheel for absl-py: started\n",
-      "  Running setup.py bdist_wheel for absl-py: finished with status 'done'\n",
-      "  Stored in directory: C:\\Users\\gabri\\AppData\\Local\\pip\\Cache\\wheels\\45\\07\\0e\\6880381ca521796cf6cc18ba4ab502c2232e5777099b4df4ae\n",
-      "  Running setup.py bdist_wheel for html5lib: started\n",
-      "  Running setup.py bdist_wheel for html5lib: finished with status 'done'\n",
-      "  Stored in directory: C:\\Users\\gabri\\AppData\\Local\\pip\\Cache\\wheels\\6f\\85\\6c\\56b8e1292c6214c4eb73b9dda50f53e8e977bf65989373c962\n",
-      "Successfully built absl-py html5lib\n",
-      "Installing collected packages: protobuf, html5lib, bleach, markdown, tensorflow-tensorboard, absl-py, tensorflow\n",
-      "  Found existing installation: html5lib 0.999999999\n",
-      "    Uninstalling html5lib-0.999999999:\n",
-      "      Successfully uninstalled html5lib-0.999999999\n",
-      "  Found existing installation: bleach 2.0.0\n",
-      "    Uninstalling bleach-2.0.0:\n",
-      "      Successfully uninstalled bleach-2.0.0\n",
-      "Successfully installed absl-py-0.1.10 bleach-1.5.0 html5lib-0.9999999 markdown-2.6.11 protobuf-3.5.1 tensorflow-1.5.0 tensorflow-tensorboard-1.5.1\n",
-      "Requirement already satisfied: tflearn in c:\\users\\gabri\\anaconda3\\lib\\site-packages\n",
-      "Requirement already satisfied: six in c:\\users\\gabri\\anaconda3\\lib\\site-packages (from tflearn)\n",
-      "Requirement already satisfied: numpy in c:\\users\\gabri\\anaconda3\\lib\\site-packages (from tflearn)\n",
-      "Requirement already satisfied: Pillow in c:\\users\\gabri\\anaconda3\\lib\\site-packages (from tflearn)\n",
-      "Requirement already satisfied: olefile in c:\\users\\gabri\\anaconda3\\lib\\site-packages (from Pillow->tflearn)\n",
-      "curses is not supported on this machine (please install/reinstall curses for an optimal experience)\n"
+      "/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
      ]
     }
    ],
@@ -57,32 +18,22 @@
     "import nltk\n",
     "from nltk.stem.lancaster import LancasterStemmer\n",
     "import numpy as np\n",
-    "!pip install tensorflow\n",
-    "!pip install tflearn\n",
+    "#!pip install tensorflow\n",
+    "#!pip install tflearn\n",
     "import tflearn\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "#!pip3 install tensorflow==1.2.0 --ignore-installed\n",
     "import tensorflow as tf\n",
     "import random\n",
     "import json\n",
     "import string\n",
     "import unicodedata\n",
-    "import sys\n"
+    "import sys\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,22 +49,14 @@
     "# initialize the stemmer\n",
     "stemmer = LancasterStemmer()\n",
     "# variable to hold the Json data read from the file\n",
-    "data = None\n"
+    "#data = None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'time': ['what time is it?', 'how long has it been since we started?', \"that's a long time ago\", ' I spoke to you last week', ' I saw you yesterday'], 'sorry': [\"I'm extremely sorry\", 'did he apologize to you?', \"I shouldn't have been rude\"], 'greeting': ['Hello there!', 'Hey man! How are you?', 'hi'], 'farewell': ['It was a pleasure meeting you', 'Good Bye.', 'see you soon', 'I gotta go now.'], 'age': [\"what's your age?\", 'How old are you?', \"I'm a couple of years older than her\", 'You look aged!']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# read the json file and load the training data\n",
@@ -125,86 +68,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "what time is it\n",
-      "tokenized words:  ['what', 'time', 'is', 'it']\n",
-      "how long has it been since we started\n",
-      "tokenized words:  ['how', 'long', 'has', 'it', 'been', 'since', 'we', 'started']\n",
-      "thats a long time ago\n",
-      "tokenized words:  ['thats', 'a', 'long', 'time', 'ago']\n",
-      " I spoke to you last week\n",
-      "tokenized words:  ['I', 'spoke', 'to', 'you', 'last', 'week']\n",
-      " I saw you yesterday\n",
-      "tokenized words:  ['I', 'saw', 'you', 'yesterday']\n",
-      "Im extremely sorry\n",
-      "tokenized words:  ['Im', 'extremely', 'sorry']\n",
-      "did he apologize to you\n",
-      "tokenized words:  ['did', 'he', 'apologize', 'to', 'you']\n",
-      "I shouldnt have been rude\n",
-      "tokenized words:  ['I', 'shouldnt', 'have', 'been', 'rude']\n",
-      "Hello there\n",
-      "tokenized words:  ['Hello', 'there']\n",
-      "Hey man How are you\n",
-      "tokenized words:  ['Hey', 'man', 'How', 'are', 'you']\n",
-      "hi\n",
-      "tokenized words:  ['hi']\n",
-      "It was a pleasure meeting you\n",
-      "tokenized words:  ['It', 'was', 'a', 'pleasure', 'meeting', 'you']\n",
-      "Good Bye\n",
-      "tokenized words:  ['Good', 'Bye']\n",
-      "see you soon\n",
-      "tokenized words:  ['see', 'you', 'soon']\n",
-      "I gotta go now\n",
-      "tokenized words:  ['I', 'got', 'ta', 'go', 'now']\n",
-      "whats your age\n",
-      "tokenized words:  ['whats', 'your', 'age']\n",
-      "How old are you\n",
-      "tokenized words:  ['How', 'old', 'are', 'you']\n",
-      "Im a couple of years older than her\n",
-      "tokenized words:  ['Im', 'a', 'couple', 'of', 'years', 'older', 'than', 'her']\n",
-      "You look aged\n",
-      "tokenized words:  ['You', 'look', 'aged']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# get a list of all categories to train for\n",
-    "categories = list(data.keys())\n",
-    "words = []\n",
-    "# a list of tuples with words in the sentence and category name\n",
-    "docs = []\n",
+    "dados = pd.read_csv('~/Documents/dsa/data/reviewFinal.csv',encoding='latin-1')\n",
+    "corpus = pd.DataFrame()\n",
+    "listTitle = []\n",
+    "listRecom = []\n",
     "\n",
-    "for each_category in data.keys():\n",
-    "    for each_sentence in data[each_category]:\n",
-    "        # remove any punctuation from the sentence\n",
-    "        each_sentence = remove_punctuation(each_sentence)\n",
-    "        print(each_sentence)\n",
-    "        # extract words from each sentence and append to the word list\n",
-    "        w = nltk.word_tokenize(each_sentence)\n",
-    "        print(\"tokenized words: \", w)\n",
-    "        words.extend(w)\n",
-    "        docs.append((w, each_category))\n"
+    "for i, r in dados.iterrows():\n",
+    "    if r['recommend'] != 'NI' and r['title'] != \"\" and r['title'] is not np.nan and r['site'] == \"glassdoor\":\n",
+    "        listTitle.append(r['title'])\n",
+    "        listRecom.append(r['recommend'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(['what', 'time', 'is', 'it'], 'time'), (['how', 'long', 'has', 'it', 'been', 'since', 'we', 'started'], 'time'), (['thats', 'a', 'long', 'time', 'ago'], 'time'), (['I', 'spoke', 'to', 'you', 'last', 'week'], 'time'), (['I', 'saw', 'you', 'yesterday'], 'time'), (['Im', 'extremely', 'sorry'], 'sorry'), (['did', 'he', 'apologize', 'to', 'you'], 'sorry'), (['I', 'shouldnt', 'have', 'been', 'rude'], 'sorry'), (['Hello', 'there'], 'greeting'), (['Hey', 'man', 'How', 'are', 'you'], 'greeting'), (['hi'], 'greeting'), (['It', 'was', 'a', 'pleasure', 'meeting', 'you'], 'farewell'), (['Good', 'Bye'], 'farewell'), (['see', 'you', 'soon'], 'farewell'), (['I', 'got', 'ta', 'go', 'now'], 'farewell'), (['whats', 'your', 'age'], 'age'), (['How', 'old', 'are', 'you'], 'age'), (['Im', 'a', 'couple', 'of', 'years', 'older', 'than', 'her'], 'age'), (['You', 'look', 'aged'], 'age')]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "5000"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "corpus['title'] = listTitle\n",
+    "corpus['recommend'] = listRecom\n",
+    "data = corpus[:5000]\n",
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get a list of all categories to train for\n",
+    "categories = list(set(listRecom))\n",
+    "words = []\n",
+    "# a list of tuples with words in the sentence and category name\n",
+    "docs = []\n",
+    "\n",
+    "#for each_category in data.keys():\n",
+    "for i, row in data.iterrows():\n",
+    "    # remove any punctuation from the sentence\n",
+    "    each_sentence = remove_punctuation(row['title'])\n",
+    "\n",
+    "    #print(each_sentence)\n",
+    "\n",
+    "    # extract words from each sentence and append to the word list\n",
+    "    w = nltk.word_tokenize(each_sentence)\n",
+    "    #print(\"tokenized words: \", w)\n",
+    "\n",
+    "    words.extend(w)\n",
+    "    docs.append((w, row['recommend']))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
     "# stem and lower each word and remove duplicates\n",
@@ -212,12 +145,12 @@
     "words = sorted(list(set(words)))\n",
     "\n",
     "#print(words)\n",
-    "print(docs)"
+    "#print(docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,10 +163,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for doc in docs:\n",
@@ -257,10 +188,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# shuffle our features and turn into np.array as tensorflow  takes in numpy array\n",
@@ -274,17 +203,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Step: 4499  | total loss: \u001b[1m\u001b[32m0.00402\u001b[0m\u001b[0m | time: 0.006s\n",
-      "| Adam | epoch: 1500 | loss: 0.00402 - acc: 1.0000 -- iter: 16/19\n",
-      "Training Step: 4500  | total loss: \u001b[1m\u001b[32m0.00404\u001b[0m\u001b[0m | time: 0.009s\n",
-      "| Adam | epoch: 1500 | loss: 0.00404 - acc: 1.0000 -- iter: 19/19\n",
+      "Training Step: 624999  | total loss: \u001b[1m\u001b[32m0.23649\u001b[0m\u001b[0m | time: 2.566s\n",
+      "| Adam | epoch: 1000 | loss: 0.23649 - acc: 0.8807 -- iter: 4992/5000\n",
+      "Training Step: 625000  | total loss: \u001b[1m\u001b[32m0.21429\u001b[0m\u001b[0m | time: 2.570s\n",
+      "| Adam | epoch: 1000 | loss: 0.21429 - acc: 0.8927 -- iter: 5000/5000\n",
       "--\n"
      ]
     }
@@ -303,36 +232,14 @@
     "# Define model and setup tensorboard\n",
     "model = tflearn.DNN(net, tensorboard_dir='tflearn_logs')\n",
     "# Start training (apply gradient descent algorithm)\n",
-    "model.fit(train_x, train_y, n_epoch=1500, batch_size=8, show_metric=True)\n",
+    "model.fit(train_x, train_y, n_epoch=1000, batch_size=8, show_metric=True)\n",
     "#model.save('model.tflearn')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 0, 0, 1, 0]"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_y[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "def get_tf_record(sentenceL):\n",
@@ -375,10 +282,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#output_row[categories.index(doc[1])] = 1\n",
+    "categories.index(x['recommend'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.66"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_test = corpus[10000:20000]\n",
+    "title_test = []\n",
+    "y_test = []\n",
+    "for i,x in data_test.iterrows():\n",
+    "    title_test.append(x['title'])\n",
+    "    y_test.append(categories.index(x['recommend']))\n",
+    "    \n",
+    "title_test = get_tf_record(title_test)\n",
+    "pred = model.predict(title_test)\n",
+    "pred_y = list(np.argmax(pred,axis=1))\n",
+    "#pred.max(axis=0)\n",
+    "pred_y\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy_score(y_test,pred_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# let's test the mdodel for a few sentences:\n",
@@ -393,27 +352,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['time', 'sorry', 'greeting', 'farewell', 'age']"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(np.argmax(model.predict([get_tf_record(sent_1)])))\n",
     "categories"
@@ -421,20 +362,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time\n",
-      "farewell\n",
-      "farewell\n",
-      "age\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# we can start to predict the results for each of the 4 sentences\n",
@@ -446,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,24 +395,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  9.95620549e-01   2.26564473e-03   9.98753364e-08   2.11372017e-03\n",
-      "    4.43430892e-08]\n",
-      " [  4.29353713e-05   3.22086047e-09   1.45874766e-03   9.98498321e-01\n",
-      "    8.65566552e-09]\n",
-      " [  2.90638983e-01   1.47789922e-02   1.36470152e-02   6.79553807e-01\n",
-      "    1.38119771e-03]\n",
-      " [  9.49604284e-11   1.21153098e-05   9.94933071e-04   8.00174149e-09\n",
-      "    9.98992980e-01]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(pred)\n",
     "#print(categories[np.argmax(model.predict([get_tf_record(sent_1)]))])\n",
@@ -493,20 +408,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 3, 3, 4]"
-      ]
-     },
-     "execution_count": 181,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pred_y = list(np.argmax(pred,axis=1))\n",
     "#pred.max(axis=0)\n",
@@ -515,20 +419,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 185,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
     "accuracy_score(labels,pred_y)\n",
@@ -552,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
