--- a/review_classification_deep_learning.ipynb
+++ b/review_classification_deep_learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,14 +59,14 @@
     "\n",
     "## FILTRANDO OS REGISTROS\n",
     "for i, r in dados.iterrows():\n",
-    "    if r['recommend'] != 'NI' and r['title'] != \"\" and r['title'] is not np.nan and r['site'] == \"glassdoor\":\n",
+    "    if r['recommend'] != 'NI' and r['title'] != \"\" and r['title'] is not np.nan:# and r['site'] == \"glassdoor\":\n",
     "        listTitle.append(r['title'])\n",
     "        listRecom.append(r['recommend'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,21 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Step: 40289  | total loss: \u001b[1m\u001b[32m0.44550\u001b[0m\u001b[0m | time: 38.944s\n",
-      "| Adam | epoch: 005 | loss: 0.44550 - acc: 0.7846 -- iter: 64456/64460\n",
-      "Training Step: 40290  | total loss: \u001b[1m\u001b[32m0.44429\u001b[0m\u001b[0m | time: 38.948s\n",
-      "| Adam | epoch: 005 | loss: 0.44429 - acc: 0.7811 -- iter: 64460/64460\n",
-      "--\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# reset underlying graph data\n",
     "tf.reset_default_graph()\n",
@@ -204,7 +192,7 @@
     "model = tflearn.DNN(net, tensorboard_dir='tflearn_logs')\n",
     "\n",
     "# treinando o modelo (aplicando gradient descent algorithm)\n",
-    "model.fit(train_x, train_y, n_epoch=5, batch_size=8, show_metric=True)\n",
+    "model.fit(train_x, train_y, n_epoch=1000, batch_size=8, show_metric=True)\n",
     "#model.save('model.tflearn')"
    ]
   },
